bug squashing after bg overhaul

--- a/Themes/Blackberry-Flat/bbf_tautulli.css
+++ b/Themes/Blackberry-Flat/bbf_tautulli.css
@@ -11,7 +11,6 @@ html {
   -o-background-size: auto, cover;
   min-height: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, .0);
 }
 body {
   background: rgba(0, 0, 0, 0);
